# python-public-policy

./: .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  README.md  _config.yml  _toc.yml  assignments.md  assistant_guide.md  brackets.ipynb  conf.py  curve.ipynb  environment.yml  exam.md  filtering.ipynb  final_project.ipynb  final_project.md  home.md  hw_0.ipynb  hw_0_solution.ipynb  hw_1.ipynb  hw_1.md  hw_1_solution.ipynb  hw_2.ipynb  hw_2_solution.ipynb  hw_3.ipynb  hw_3_solution.ipynb  hw_3_starter.ipynb  hw_4.ipynb  hw_4.md  hw_4_solution.ipynb  hw_4_starter.ipynb  hw_5.ipynb  hw_5_old.ipynb  hw_5_solution.ipynb  hw_6.ipynb  hw_6_solution.ipynb  (+45 more)
.github/: CONTRIBUTING.md  dependabot.yml
_static/: shorten.js  site.js  styles.css
assignments/: open_ended.md
crash_course/: pandas_crash_course.ipynb
docs/: hw_0.ipynb  hw_1.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb  hw_5.ipynb  index.md  lecture_0.ipynb  lecture_1.ipynb  lecture_2.ipynb  lecture_3.ipynb  lecture_4.ipynb  lecture_5.ipynb  lecture_5_exercise.ipynb  lecture_6.ipynb  syllabus.md
extras/: CONTRIBUTING.md  Dockerfile  docker-compose.yml  environment.lock.yml  environment.yml  pandas_crash_course.ipynb  requirements.txt  rise.css  test_autograder_helpers.py  test_homeworks.py  test_lectures.py  test_notebooks.py
final_project/: creepy_crawly.ipynb  examples.md  lead.ipynb  peer_grading.md  proposal.md  resources.md  universities.ipynb
homework/: hw_0.ipynb  hw_1.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb  hw_5.ipynb
hw_2/: datasets.ipynb
(+123 files in other folders)
