[tool.poetry]
authors = ["Aidan Feldman"]
description = "Python Coding for Public Policy"
name = "python-public-policy"
version = "0.1.0"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
ipytest = "0.12.0" 
kaleido = "0.2.1" # https://plotly.com/python/static-image-export/
pandas = "1.5.2" 
plotly = "5.10.0" 
python = "^3.10" 
statsmodels = "0.13.2" 

[tool.poetry.dev-dependencies]
# local development
black = "^22.10.0"
jupyter-contrib-nbextensions = "^0.7.0"
nbqa = "^1.5.3"
notebook = "^6.5.2"

# extensions
ipykernel = "^6.17.1"
jupyter-resource-usage = "^0.6.4"
rise = "^5.7.1"

# CI
nbconvert = "6.5.3"
nbdime = "^3.1.1"
pytest = "^7.2.0"

# other
jupyter-book = "0.13.1" # this needs to stay in sync with docs/environment.yml
requests = "^2.28.1" 

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
